# vsql-httpfs

./: .gitignore  CMakeLists.txt  LICENSE  README.md  manifest.json
cmake/: FindVillageSQL.cmake
mysql-test/r/: http_read.result  s3_read.result
mysql-test/t/: http_read.test  s3_read.test
src/: http_client.cc  httpfs.cc  s3_client.cc
src/include/: httpfs.h
